Ensure subtitle overflows on left, prevent history item overflow

--- a/share/goodie/calculator/calculator.css
+++ b/share/goodie/calculator/calculator.css
@@ -280,6 +280,7 @@ input:checked+.tile__ctrl__toggle-slider:before {
     font-weight: lighter;
     margin-top: -0.2em;
     height: 1em;
+    float: right;
 }
 
 .zci--calculator .tile__calc .tile__display__main {
